--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "culqi/culqi-php",
-  "description": "Cliente Culqi API para PHP",
+  "name": "gonzalesc/paljet-php",
+  "description": "Culqi API to PHP",
   "keywords": ["culqi", "client", "api", "peru", "php", "payments", "pagos"],
   "homepage": "https://culqi.com",
   "type": "library",
