fix: repository name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "gonzalesc/paljet-php",
+  "name": "gonzalesc/culqi-php",
   "description": "Culqi API to PHP",
   "keywords": ["culqi", "client", "api", "peru", "php", "payments", "pagos"],
   "homepage": "https://culqi.com",
